change the buttonElement's attribute

--- a/html.html
+++ b/html.html
@@ -10,7 +10,7 @@
         <h1 class="name-nft">GiaHu #9311</h1>
         <img src="nft.jpg" alt="GiaHu NFT">
         <div class="nft-box"></div>
-        <button class="button-19" role="button">BUY</button>
+        <button class="buy button" role="button">BUY</button>
     </div>
     
     <script src="javascript.js"></script>
